# cohere

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
doe-suite-config/: README.md  pyproject.toml
doe-suite-config/designs/: minimal.yml  sp_sub.yml  sp_unlock.yml  sp_workloads.yml
doe-suite-config/designs/design_vars/: defaults_v2.yml  sp_scenario.yml
doe-suite-config/doe-suite-results-super/sp_sub/sub_line/: sub_line.csv  subsampling_equal-ncd_dpk-gurobi_04_basic:GM-LM-RR-LSVT_scatter_legend.csv  subsampling_ncd_dpk-gurobi_04_gm:GM_scatter_legend.csv
doe-suite-config/does_etl_custom/debug/: overview.py
doe-suite-config/does_etl_custom/etl/: sp.py
doe-suite-config/does_etl_custom/plots/: config.py  performance_plot_sp.py  sprites.py  subsampling_advantage_plot_sp.py  utility_plot_sp.py  utility_round_plot_sp.py
doe-suite-config/group_vars/all/: .gitignore  gurobi_license.md  main.yml
doe-suite-config/group_vars/gurobi/: main.yml
doe-suite-config/group_vars/gurobi_long/: main.yml
doe-suite-config/gurobi_config/: gurobi_4threads_2h.env
doe-suite-config/roles/data-setup/tasks/: aws.yml  euler.yml
doe-suite-config/roles/setup-cohere/tasks/: aws.yml  euler.yml
doe-suite-config/roles/setup-cohere/vars/: main.yml
doe-suite-config/roles/setup-gurobi/tasks/: aws.yml
doe-suite-config/roles/setup-python/tasks/: aws.yml  euler.yml
doe-suite-config/super_etl/: sp_sub.yml  sp_workloads.yml
doe-suite-config/super_etl/aux/: comparison-fig7.tex  subsampling-fig5.tex  unlocking-fig6.tex
dp-planner/: .gitignore  Cargo.toml  README.md  criterion.toml  gurobi.env  rust-toolchain
dp-planner/benches/: allocation_bench.rs  ilp_scaling.rs  narray_hash.rs  segmentation_bench.rs
dp-planner/resources/applications/minimal/: blocks.json  schema.json
dp-planner/resources/specific_setup/: accepted_requests.json  config.json  ilp_allocated_requests.json
dp-planner/resources/test/: requests_1536.json  requests_200.json  requests_3415.json  requests_500.json
dp-planner/resources/test/adapter_configs/: adapter_config.json  adapter_config_adp_2_blocks.json  adapter_config_adp_single_block.json  adapter_config_hard_assignment.json  adapter_config_hard_assignment_10_blocks.json  adapter_config_hard_assignment_10_blocks_laplace_and_gauss.json  adapter_config_rdp.json  adapter_config_rdp_a1.json  adapter_config_rdp_conversion.json  adapter_config_rdp_conversion_should_panic.json  adapter_config_rdp_conversion_unspecified.json  adapter_config_should_not_panic_1.json  adapter_config_should_panic_1.json  adapter_config_should_panic_2.json  adapter_config_should_panic_3.json  adapter_config_should_panic_4.json  (+9 more)
dp-planner/src/: config.rs  generate_blocks.rs  lib.rs  logging.rs  main.rs  replay_allocation.rs  util.rs
dp-planner/src/allocation/: dpf.rs  greedy.rs  mod.rs  utils.rs
dp-planner/src/block/: external.rs  mod.rs
dp-planner/src/composition/: mod.rs
dp-planner/src/dprivacy/: budget.rs  mod.rs  rdp_alphas_accounting.rs
dp-planner/src/request/: adapter.rs  external.rs  internal.rs  mod.rs
dp-planner/src/schema/: mod.rs
dp-planner/src/simulation/: mod.rs  util.rs
hyperparam-explorer/: README.md  pyproject.toml
hyperparam-explorer/hyperparam_explorer/: main.py
hyperparam-explorer/hyperparam_explorer/hyperparameter/: accounting_info.py  budget_info.py  default_mechanisms.py  user_info.py
request-adapter/: README.md  pyproject.toml
request-adapter/request_adapter/: main.py
request-adapter/request_adapter/adapter/: libconverter.py
workload-simulator/: README.md  pyproject.toml
workload-simulator/workload_simulator/: main.py  report.py  simulation.py
workload-simulator/workload_simulator/block_generator/: block.py
workload-simulator/workload_simulator/request_generator/: calibration.py  mechanism.py  mode.py  partitioning.py  request.py  sampling.py  utility.py
workload-simulator/workload_simulator/schema/: scenario.py  schema.py
(+77 files in other folders)
