[tool.poetry]
name = "does_etl_custom"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.3"
tqdm = "^4.64.0" # custom dependency only for custom etl steps

# link the doe-suite repo integration
doespy = {path = "../doe-suite/doespy", develop = true}
jupyterlab = "^3.4.5"
pydantic = "^1.10.1"
setuptools = "^65.6.3"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
